[package]
name = "dndtrigger"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["macos"]
categories = ["command-line-utilities"]
description = "A simple cli/service for MacOS to execute scripts when Do Not Disturb is toggled on or off."
repository = "https://github.com/collingray/dndtrigger.git"
readme = "CRATES_README.md"

[dependencies]
clap = "4.5.4"
plist = "1.6.1"
service-manager = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
